--- a/index.html
+++ b/index.html
@@ -18,22 +18,21 @@
     <h1>INSERT IMAGE HERE</h1>
 </div>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">B-bike</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active text-capitalize">
+            <li class="nav-item text-capitalize">
                 <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item text-capitalize">
                 <a class="nav-link" href="aboutus.html">about us</a>
             </li>
-            <li class="nav-item text-capitalize">
+            <li class="nav-item active text-capitalize">
                 <a class="nav-link" href="contact.html">contact</a>
             </li>
             <li class="nav-item text-capitalize">
@@ -43,10 +42,6 @@
                 <a class="nav-link" href="blog.html">blog</a>
             </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
     </div>
 </nav>
 
@@ -65,22 +60,22 @@
         <img class="d-flex align-self-center  img-thumbnail ml-5" src="resources/bike2.jpg"
              alt="Generic placeholder image" style="max-height: 300px; max-width: 300px;">
         <div class="media-body m-5">
-            <h2 class="mt-0">Center-aligned media</h2>
-            <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus
-                odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate
-                fringilla. Donec lacinia congue felis in faucibus.</p>
-            <p class="mb-0">Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque
-                penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+            <h2 class="mt-0">The bike</h2>
+            <p>B-bikes have been designed to offer optimal comfort in the streets of Antwerpen. Its wide saddle, large
+                wheels and front suspension help to tame cobblestones and tram rails. Thanks to its electric assistance
+                up to 25 km / h, you won’t feel the hills of Antwerpen.</p>
+            <p class="mb-0">In conjunction with your B-bike hire, you can also hire equipment to transport your
+                children.</p>
         </div>
     </div>
     <div class="media border-bottom">
         <div class="media-body m-5">
-            <h2 class="mt-0">Center-aligned media</h2>
-            <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus
-                odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate
-                fringilla. Donec lacinia congue felis in faucibus.</p>
-            <p class="mb-0">Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque
-                penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+            <h2 class="mt-0">Sustainability</h2>
+            <p>Through developing personalised solutions that facilitate and encourage people to transition to cycling,
+                B-bike contributes to a higher quality of life.</p>
+            <p class="mb-0">We manufacture all of our products with clean and renewable energy provided by the sun from
+                the PV farm that we own. By owning a B-Bike you become a part of the community that cares for the
+                sustainability of our planet.</p>
         </div>
         <img class="d-flex align-self-center img-thumbnail mr-5" src="resources/bike3.jpg"
              style="max-height: 300px; max-width: 300px;" alt="Generic placeholder image">
@@ -89,44 +84,44 @@
         <img class="d-flex align-self-center  img-thumbnail ml-5" src="resources/bike4.jpg"
              alt="Generic placeholder image" style="max-height: 300px; max-width: 300px;">
         <div class="media-body m-5">
-            <h2 class="mt-0">Center-aligned media</h2>
-            <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus
-                odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate
-                fringilla. Donec lacinia congue felis in faucibus.</p>
-            <p class="mb-0">Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque
-                penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+            <h2 class="mt-0">Cycle repair and workshop services</h2>
+            <p>Our fully equipped workshops are class leading. We handle all bicycle repairs from simple puncture fixes
+                through to complex builds and repairs. Our mechanics are Cytech-qualified and trained on Bromptons, hub
+                gears and electronic drivetrains as well as more unusual repairs..</p>
+            <p class="mb-0">For help, information or to make a booking please go to our <a href="contact.html">contact
+                form.</a></p>
         </div>
     </div>
     <div class="card-group mt-3 text-center">
         <div class="card border-0">
             <div class="card-body">
                 <img class="card-img-top small-im" src="resources/003-settings.png" alt="Card image cap">
-                <h4 class="card-title">Card title</h4>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                    content. This content is a little bit longer.</p>
+                <h4 class="card-title">Maintenance</h4>
+                <p class="card-text">We are a full-service bike repair shop. From fixing a flat tire
+                    to a comprehensive tune-up, we can have you road-ready in no time.</p>
             </div>
         </div>
         <div class="card border-0">
             <div class="card-body">
                 <img class="card-img-top small-im" src="resources/001-bycicle.png" alt="Card image cap">
-                <h4 class="card-title">Card title</h4>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                    content. This content is a little bit longer.</p>
+                <h4 class="card-title">Quality</h4>
+                <p class="card-text">With inspiration and innovation, combined with quality and value, we aim to improve
+                    the lives of our customers.</p>
             </div>
         </div>
         <div class="card border-0">
             <div class="card-body">
                 <img class="card-img-top small-im" src="resources/002-credit-card.png" alt="Card image cap">
-                <h4 class="card-title">Card title</h4>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                    content. This content is a little bit longer.</p>
+                <h4 class="card-title">Payment</h4>
+                <p class="card-text">For the purchase of your B-bike, we offer you payment facility. You have the
+                    opportunity to pay in three times without fees.</p>
             </div>
         </div>
     </div>
 </div>
 
 <!-- Footer -->
-<footer class="page-footer font-small blue bg-light">
+<footer class="page-footer font-small text-white bg-dark">
     <div class=" container mt-3 d-flex flex-row pt-5">
         <div class="p-2 m-3 w-25">
             <div class="card-body">
@@ -162,6 +157,7 @@
             </div>
         </div>
     </div>
+
 
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
