--- a/aboutus.html
+++ b/aboutus.html
@@ -50,23 +50,32 @@
 <div>
     <img src="resources/aboutus4.jpeg" class="img-fluid max-width: 100%" alt="image of B-bike">
 </div>
-<div>
-    <img src="resources/aboutus2.jpeg" class="img-fluid rounded float-left"
-         alt="image of B-bike">
-    <p class="text-right">Ambitioni dedisse scripsisse iudicaretur. Cras mattis iudicium purus sit amet fermentum. Donec
-        sed odio operae, eu vulputate felis rhoncus. Praeterea iter est quasdam res quas ex communi. At nos hinc
-        posthac, sitientis piros Afros. Petierunt uti sibi concilium totius Galliae in diem certam indicere. Cras mattis
-        iudicium purus sit amet fermentum.</p>
-</div>
-<div>
-    <img src="resources/aboutus3.jpeg" class="img-fluid rounded float-right"
-         alt="image of B-bike">
-    <p class="text-left">.Ambitioni dedisse scripsisse iudicaretur. Cras mattis iudicium purus sit amet fermentum. Donec
-        sed odio operae, eu vulputate felis rhoncus. Praeterea iter est quasdam res quas ex communi. At nos hinc
-        posthac, sitientis piros Afros. Petierunt uti sibi concilium totius Galliae in diem certam indicere. Cras mattis
-        iudicium purus sit amet fermentum.</p>
+<div class="card w-50">
+    <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Ambitioni dedisse scripsisse iudicaretur. Cras mattis iudicium purus sit amet fermentum.
+            Donec
+            sed odio operae, eu vulputate felis rhoncus. Praeterea iter est quasdam res quas ex communi. At nos hinc
+            posthac, sitientis piros Afros. Petierunt uti sibi concilium totius Galliae in diem certam indicere. Cras
+            mattis
+            iudicium purus sit amet fermentum.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+    <img class="card-img-bottom" src="resources/aboutus2.jpeg" alt="Card image cap">
 </div>
 
+<div>
+    <div class="card w-50">
+        <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Ambitioni dedisse scripsisse iudicaretur. Cras mattis iudicium purus sit amet fermentum. Donec
+                sed odio operae, eu vulputate felis rhoncus. Praeterea iter est quasdam res quas ex communi. At nos hinc
+                posthac, sitientis piros Afros. Petierunt uti sibi concilium totius Galliae in diem certam indicere. Cras mattis
+                iudicium purus sit amet fermentum</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+        <img class="card-img-bottom" src="resources/aboutus3.jpeg" alt="image of B-bike">
+    </div>
 
 <div class="container pt-5">
     <h1></h1>
