--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">B-bike</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -27,20 +27,16 @@
             <li class="nav-item text-capitalize">
                 <a class="nav-link" href="aboutus.html">about us</a>
             </li>
-            <li class="nav-item text-capitalize">
+            <li class="nav-item active text-capitalize">
                 <a class="nav-link" href="contact.html">contact</a>
             </li>
             <li class="nav-item text-capitalize">
                 <a class="nav-link" href="services.html">service</a>
             </li>
-            <li class="nav-item active text-capitalize">
+            <li class="nav-item text-capitalize">
                 <a class="nav-link" href="blog.html">blog</a>
             </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
     </div>
 </nav>
 
