--- a/services.html
+++ b/services.html
@@ -45,7 +45,7 @@
 </nav>
 
 
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleIndicators" class="carousel slide " data-ride="carousel" style="height: 100vh">
     <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -53,7 +53,7 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
     </ol>
-    <div class="carousel-inner " role="listbox">
+    <div class="carousel-inner h-100" role="listbox">
         <div class="carousel-item active">
             <img class="d-block w-100" src="resources/bike1.jpg" alt="900x400"  data-holder-rendered="true">
         </div>
@@ -64,7 +64,7 @@
             <img class="d-block w-100" src="resources/bike3.jpg" data-src="holder.js/900x400?theme=industrial" alt="900x400"  data-holder-rendered="true">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="resources/bike4.jpg" data-src="holder.js/900x400?theme=industrial" alt="900x400"  data-holder-rendered="true">
+            <img class="d-block w-100 h-auto" src="resources/bike4.jpg" data-src="holder.js/900x400?theme=industrial" alt="900x400"  data-holder-rendered="true">
         </div>
         <div class="carousel-item">
             <img class="d-block w-100" src="resources/bike10.jpg" data-src="holder.js/900x400?theme=industrial" alt="900x400"  data-holder-rendered="true">
