--- a/contact.html
+++ b/contact.html
@@ -114,7 +114,7 @@
         </div>
         <div class="col-sm">
         <h2 class="pb-3">Phone us!</h2>
-        <a href="tel:555-555-5555"><img src="resources/phone-icon.png"></a>
+        <a href="tel:555-555-5555"><img src="resources/phone-icon.png" height="50px"></a>
             03/655.65.65
     </div>
     </div>
