--- a/services.html
+++ b/services.html
@@ -278,7 +278,6 @@
                 <div class="card-body">
                     <h4 class="card-title">What we offer</h4>
                     <p class="card-text">We are your premium partner for bike service and delivery. Our services are perfectly adapted to your needs and your satisfaction is most important to us – no matter where you bought your bike.</p>
-                    <a href="#!" class="btn btn-primary">Go somewhere</a>
                 </div>
             </div>
             <div class="card col-md m-1">
@@ -286,7 +285,6 @@
                 <div class="card-body">
                     <h4 class="card-title">What we offer</h4>
                     <p class="card-text">We are your premium partner for bike service and delivery. Our services are perfectly adapted to your needs and your satisfaction is most important to us – no matter where you bought your bike.</p>
-                    <a href="#!" class="btn btn-primary">Go somewhere</a>
                 </div>
             </div>
             <div class="card col-md m-1">
@@ -294,9 +292,11 @@
                 <div class="card-body">
                     <h4 class="card-title">What we offer</h4>
                     <p class="card-text">We are your premium partner for bike service and delivery. Our services are perfectly adapted to your needs and your satisfaction is most important to us – no matter where you bought your bike.</p>
-                    <a href="#!" class="btn btn-primary">Go somewhere</a>
                 </div>
             </div>
+        </div>
+        <div class="btn-visit text-center w-100 mt-3">
+            <a href="#!" class="btn btn-primary text-center" style="width: 30%">Go somewhere</a>
         </div>
     </section>
 </div>
@@ -315,7 +315,7 @@
                 <p>Phone : 555-555-5555</p>
             </div>
         </div>
-        <div class="p-2 m-3 w-50 ">
+        <div class="p-2 m-3 w-50 text-">
             <div class="card-body">
                 <table class="table">
                     <thead>
