--- a/blog.html
+++ b/blog.html
@@ -28,13 +28,13 @@
                 <a class="nav-link" href="aboutus.html">about us</a>
             </li>
             <li class="nav-item text-capitalize">
-                <a class="nav-link" href="contact.html">contact</a>
-            </li>
-            <li class="nav-item text-capitalize">
                 <a class="nav-link" href="services.html">service</a>
             </li>
             <li class="nav-item active text-capitalize">
                 <a class="nav-link" href="blog.html">blog</a>
+            </li>
+            <li class="nav-item text-capitalize">
+                <a class="nav-link" href="contact.html">contact</a>
             </li>
         </ul>
     </div>
@@ -101,8 +101,7 @@
                 friendly mode of transport.</p>
             <p>Ivan Illich stated that bicycle use extended the usable physical environment
                 for people, while alternatives such as cars and motorways degraded and confined people's
-                environment and mobility. Currently, two billion bicycles are in use around the world. Children,
-                students, professionals, laborers, civil servants and seniors are pedaling around their communities.</p>
+                environment and mobility. Currently, two billion bicycles are in use around the world.</p>
             <a href="https://en.wikipedia.org/wiki/Bicycle#Environmental_impact" class="btn btn-primary" role="button">More Info</a>
         </div>
     </div>
@@ -115,39 +114,41 @@
 
 
 <!-- Footer -->
-<footer class="page-footer font-small blue bg-light">
-    <div class=" container mt-3 d-flex flex-row pt-5">
-        <div class="p-2 m-3 w-25">
-            <div class="card-body">
-                <h3 class="card-title">B-bike</h3>
-                <p class="card-text">
-                    Tolhuis,<br>
-                    Sint-Pietersvliet 7,<br>
-                    2000 Antwerpen
-                </p>
-                <p>Phone : 555-555-5555</p>
+<footer class="page-footer font-small text-light bg-dark ">
+    <div class="container">
+        <div class=" mt-3 d-flex flex-row pt-5">
+            <div class="p-2 m-3 w-25 row">
+                <div class="card-body col">
+                    <h3 class="card-title text-light">B-bike</h3>
+                    <p class="card-text">
+                        Tolhuis,<br>
+                        Sint-Pietersvliet 7,<br>
+                        2000 Antwerpen
+                    </p>
+                    <p>Phone : 555-555-5555</p>
+                </div>
             </div>
-        </div>
-        <div class="p-2 m-3 w-50 ">
-            <div class="card-body">
-                <table class="table">
-                    <thead>
-                    <tr class="text-center">
-                        <th></th>
-                        <th>Opening hours</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <th scope="row">From monday to saturday :</th>
-                        <td class="text-center">10:00-18:00</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Sunday :</th>
-                        <td class="text-center">Closed</td>
-                    </tr>
-                    </tbody>
-                </table>
+            <div class="p-2 m-3 w-50 row ">
+                <div class="card-body col">
+                    <table class="table text-light">
+                        <thead>
+                        <tr class="text-center">
+                            <th></th>
+                            <th>Opening hours</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <th scope="row">From monday to saturday :</th>
+                            <td class="text-center">10:00-18:00</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Sunday :</th>
+                            <td class="text-center">Closed</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
