--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
 </head>
 
 <body>
-<div class="header text-center">
-    <h1>INSERT IMAGE HERE</h1>
-</div>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">B-bike</a>
@@ -49,11 +46,10 @@
 <div class="parallax ">
     <div class="wrap-center row">
         <div class="banner-centered col" id="banner-text">
-            <h2 class="mb-0">Welcome to <strong>B-bike</strong><span id="hiddedM">, have a ride on our site</span></h2>
+            <h2 class="mb-0">Welcome to <strong>B-bike</strong><span class="hiddedM">, have a ride on our site</span></h2>
             <a href="services.html" class="btn btn-outline-light mt-4 text-uppercase">Discover our bikes</a>
         </div>
     </div>
-</div>
 </div>
 
 <div class="container pt-5">
@@ -123,40 +119,36 @@
 
 <!-- Footer -->
 <footer class="page-footer font-small text-light bg-dark ">
-    <div class="container">
-        <div class=" mt-3 d-flex flex-row pt-5">
-            <div class="p-2 m-3 w-25 row">
-                <div class="card-body col">
-                    <h3 class="card-title text-light">B-bike</h3>
-                    <p class="card-text">
-                        Tolhuis,<br>
-                        Sint-Pietersvliet 7,<br>
-                        2000 Antwerpen
-                    </p>
-                    <p>Phone : 555-555-5555</p>
-                </div>
+    <div class="container pt-5">
+        <div class="row ">
+            <div class="col col-4">
+                <h3 class="text-light">B-bike</h3>
+                <p class="hiddedM">
+                    Tolhuis,<br>
+                    Sint-Pietersvliet 7,<br>
+                    2000 Antwerpen
+                </p>
+                <p class="hiddedM">Phone : 555-555-5555</p>
             </div>
-            <div class="p-2 m-3 w-50 row ">
-                <div class="card-body col">
-                    <table class="table text-light">
-                        <thead>
-                        <tr class="text-center">
-                            <th></th>
-                            <th>Opening hours</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <th scope="row">From monday to saturday :</th>
-                            <td class="text-center">10:00-18:00</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">Sunday :</th>
-                            <td class="text-center">Closed</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
+            <div class="col col-8">
+                <table class="table text-light ">
+                    <thead>
+                    <tr class="text-center">
+                        <th></th>
+                        <th>Opening hours</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <th scope="row">From monday to saturday :</th>
+                        <td class="text-center">10:00-18:00</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Sunday :</th>
+                        <td class="text-center">Closed</td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
