--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
 <div class="container">
 <div class="alert alert-danger" role="alert">
     <strong>COVID-19 measures -</strong>
-    <a href="https://www.info-coronavirus.be/nl/" target="" class="alert-link">Respect the 5 customer rule, wear a mask and keep your distance please.</a>
+    <a href="https://www.info-coronavirus.be/nl/" target="_blank" class="alert-link">Respect the 5 customer rule, wear a mask and keep your distance please.</a>
     Thank you!
 </div>
 </div>
@@ -122,43 +122,44 @@
 
 <!-- Footer -->
 
-<footer class="page-footer font-small blue bg-dark">
-    <div class=" container mt-3 d-flex flex-row pt-5">
-        <div class="p-2 m-3 w-25">
-            <div class="card-body">
-                <h3 class="card-title">B-bike</h3>
-                <p class="card-text">
-                    Tolhuis,<br>
-                    Sint-Pietersvliet 7,<br>
-                    2000 Antwerpen
-                </p>
-                <p>Phone : 555-555-5555</p>
+<footer class="page-footer font-small text-light bg-dark ">
+    <div class="container">
+        <div class=" mt-3 d-flex flex-row pt-5">
+            <div class="p-2 m-3 w-25 row">
+                <div class="card-body col">
+                    <h3 class="card-title text-light">B-bike</h3>
+                    <p class="card-text">
+                        Tolhuis,<br>
+                        Sint-Pietersvliet 7,<br>
+                        2000 Antwerpen
+                    </p>
+                    <p>Phone : 555-555-5555</p>
+                </div>
             </div>
-        </div>
-        <div class="p-2 m-3 w-50 ">
-            <div class="card-body">
-                <table class="table">
-                    <thead>
-                    <tr class="text-center">
-                        <th></th>
-                        <th>Opening hours</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <th scope="row">From monday to saturday :</th>
-                        <td class="text-center">10:00-18:00</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Sunday :</th>
-                        <td class="text-center">Closed</td>
-                    </tr>
-                    </tbody>
-                </table>
+            <div class="p-2 m-3 w-50 row ">
+                <div class="card-body col">
+                    <table class="table text-light">
+                        <thead>
+                        <tr class="text-center">
+                            <th></th>
+                            <th>Opening hours</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <th scope="row">From monday to saturday :</th>
+                            <td class="text-center">10:00-18:00</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Sunday :</th>
+                            <td class="text-center">Closed</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
-
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
         <a href="https://mdbootstrap.com/"> B-bike, Inc.</a>
